--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^5.0.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "styled-components": "^5.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
